# varpubs

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: main.yml
src/varpubs/: cache.py  cli.py  hgvs_extractor.py  pubmed_db.py  pubmed_search.py  settings.py  summarize.py  summarize_variants.py  test_extractor.py  utils.py
tests/: test_hgvs_extractor.py  test_summary.py  test_utils.py
tests/resources/: annotated.vcf
