[project]
authors = [{name = "Johannes Koester", email = "johannes.koester@uni-due.de"}]
name = "varpubs"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["tap>=0.2,<0.3", "sqlmodel>=0.0.24,<0.0.25"]

[project.scripts]
varpubs = "varpubs.cli:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
varpubs = { path = ".", editable = true }

[tool.pixi.tasks]
