[project]
authors = [{name = "Johannes Koester", email = "johannes.koester@uni-due.de"}]
name = "varpubs"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["sqlmodel>=0.0.24,<0.0.25", "sqlalchemy>=2.0.39,<3", "duckdb-engine>=0.15.0,<0.16", "duckdb>=1.2.1,<2", "typed-argument-parser>=1.10.1,<2", "simple-parsing", "cyvcf2>=0.31.1,<0.32", "biopython>=1.85,<2", "huggingface-hub>=0.20.0,<1"]

[project.scripts]
varpubs = "varpubs.cli:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64", "osx-64"]

[tool.pixi.pypi-dependencies]
varpubs = { path = ".", editable = true }

[tool.pixi.feature.dev.tasks]
format = "ruff format"
lint = "ruff check"
typecheck = "pyright"
test = "pytest -s"

[tool.pixi.feature.dev.pypi-dependencies]
ruff = "*"
pyright = "*"
typing-extensions = "*"
pytest = "*"

[tool.pixi.environments]
dev = { features = ["dev"] }
