[project]
authors = [
  { name = "Ilmay Tas", email = "ilmay.tas@ug.bilkent.edu.tr" },
  { name = "Felix Wiegand", email = "felix.wiegand@tu-dortmund.de" },
  { name = "Johannes Koester", email = "johannes.koester@uni-due.de" }
]
name = "varpubs"
requires-python = ">= 3.11"
version = "0.4.1"
dependencies = [
    "sqlmodel>=0.0.24,<0.0.25",
    "sqlalchemy>=2.0.39,<3",
    "duckdb-engine>=0.15.0,<0.16",
    "duckdb>=1.2.1,<2",
    "typed-argument-parser>=1.10.1,<2",
    "simple-parsing",
    "openai>=1.97.0,<2",
    "pubgator>=0.1.0,<0.2.0"
]

[project.scripts]
varpubs = "varpubs.cli:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64", "osx-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
varpubs = { path = ".", editable = true }

[tool.pixi.feature.dev.tasks]
format = "ruff format"
lint = "ruff check"
typecheck = "pyright"
test = "pytest -s"

[tool.pixi.feature.dev.pypi-dependencies]
ruff = "*"
pyright = "*"
typing-extensions = "*"
pytest = "*"

[tool.pixi.environments]
dev = { features = ["dev"] }

[tool.pixi.dependencies]
cyvcf2 = ">=0.31.1,<0.32"
pip = ">=25.1.1,<26"
openai = ">=1.97.0,<2"
pytest = ">=8.4.1,<9"
